--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 title                    : "Hao Chen (陈浩)"
-description              : "A junior researcher at Shanghai AI Laboratory."
+description              : "A researcher at Shanghai AI Laboratory."
 repository               : "justchenhao/justchenhao.github.io"
 google_scholar_stats_use_cdn : true
 
